--- a/requirements.txt
+++ b/requirements.txt
@@ -2,22 +2,34 @@ attrs==24.2.0
 beautifulsoup4==4.13.4
 certifi==2025.4.26
 click==8.1.8
+cycler==0.11.0
 dnspython==2.3.0
 exceptiongroup==1.3.0
+fonttools==4.38.0
 h11==0.14.0
 idna==3.10
 importlib-metadata==6.7.0
 joblib==1.3.2
+kiwisolver==1.4.5
 lxml==5.4.0
+matplotlib==3.5.3
 nltk==3.8.1
 numpy==1.21.6
 outcome==1.3.0.post0
+packaging==24.0
+pandas==1.3.5
+Pillow==9.5.0
 pymongo==4.7.3
+pyparsing==3.1.4
 PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
 regex==2024.4.16
 scikit-learn==1.0.2
 scipy==1.7.3
+seaborn==0.12.2
 selenium==4.11.2
+six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.4.1
